# cthulock

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
docs/: configuration.md  fallback_config.slint  overview.md
sample_config/: style.slint
src/: args.rs  common.rs  egl.rs  main.rs  message.rs  platform.rs  render_thread.rs  style.rs  window_adapter.rs  windowing_thread.rs
src/ui/: egl.rs  mod.rs  platform.rs  slint_types.rs  window_adapter.rs
