[package]
name = "cthulock"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.5"
futures = "0.3.30"
glutin = "0.32.0"
image = "0.25.2"
khronos-egl = { version = "6.0.0", features = ["static"] }
lexopt = "0.3.0"
log = "0.4.22"
pam-client = "0.5.0"
raw-window-handle = "0.6.2"
slint = { version = "1.7.1", default-features = false, features = ["renderer-femtovg", "std", "compat-1-2", "renderer-software"] }
slint-interpreter = { version = "1.7.1", features = ["display-diagnostics"]}
smithay-client-toolkit = "0.19.2"
tempfile = "3.11.0"
thiserror = "1.0.63"
wayland-client = "0.31.5"
wayland-egl = "0.32.3"
wayland-protocols = { version = "0.32.3", features = ["client", "staging"] }
whoami = "1.5.1"
xdg = "2.5.2"

